src/test/resources/public/input/typechecking/fail/undeclared_id/fail04.jova
class Test{

}

class Main {

  public int main() {
    Test test;
    int ret;
    
    ret = test.notExstingMethod();

    return 0;
  }

}